# template-processor

./: .gitignore  README.md  pyproject.toml
src/: base.py  builder.py  cli.py  factory.py  logger.py  main.py  ordering.json  renderer.py  validator.py
src/templates/: body_1.docx  body_2.docx  bottom_1.docx  bottom_2.docx  heading_1.docx  heading_2.docx
tests/: conftest.py  test_template_builder.py
tests/fixtures/: example.json  example_inv.json  example_over.json
